objects/Marketing_Package_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lanyon_Chain_Affiliation__c</fullName>
        <label>Chain Affiliation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Guest_Rooms__c</fullName>
        <label># Guest Rooms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>201-749</fullName>
                </value>
                <value>
                    <fullName>750+</fullName>
                </value>
                <value>
                    <fullName>&lt;200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Level__c</fullName>
        <label>Zone Level</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Marketing Package Pricing</label>
    <nameField>
        <displayFormat>MPP-{00000}</displayFormat>
        <label>Marketing Package Pricing	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Package Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lanyon_Chain_Affiliation__c</columns>
        <columns>Zone_Level__c</columns>
        <columns>Number_of_Guest_Rooms__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>